Added imgur service and fixed listing and property ids not being strings
