# api-myhome/src/routes/listing.routes.js
@@ -3,6 +3,12 @@ const { check } = require("express-validator");
 const ListingController = require("../controllers/listing.controller");
 const checkFields = require("../middlewares/validateFields");
 const checkJwt = require("../middlewares/jwtValidator");
+const ImgurStorage = require("multer-storage-imgur");
+const multer = require("multer");
+
+const upload = multer({
+  storage: ImgurStorage({ clientId: "95705b589351128" }),
+});
 
 const router = Router();
 
@@ -22,6 +28,19 @@ router.get(
     checkFields,
   ],
   ListingController.getListingsByPlace
+);
+
+//Obtener listing por id
+router.get("/:id", ListingController.getListingById);
+
+//Actualizar listing
+router.put("/", ListingController.updateListing);
+
+//Agregar imagenes a un listing
+router.post(
+  "/:id/images",
+  upload.array("images", 10),
+  ListingController.addImages
 );
 
 module.exports = router;
